// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput should match snapshot, without messages and when readonly is false 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <div
      data-mockid="InputComponent"
    />
  </div>
</div>
`;

exports[`TextInput should match snapshot, without messages and when readonly is true 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <div
      data-mockid="InputWithClipboard"
    />
  </div>
</div>
`;

exports[`TextInput should match snapshot, with config messages 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <div
      data-mockid="InputWithClipboard"
    />
    <div
      data-mockid="MessagesElement"
    />
  </div>
</div>
`;

exports[`TextInput should match snapshot, with error messages 1`] = `
<div>
  <div
    data-mockid="GroupElement"
  >
    <div
      data-mockid="LabelElement"
    />
    <div
      data-mockid="InputWithClipboard"
    />
    <div
      data-mockid="MessagesElement"
    />
  </div>
</div>
`;
